#2721 [Fixed] Form Buttons: Button stretches within container

--- a/packages/dso-toolkit/src/components/justify-form-groups/justify-form-groups.scss
+++ b/packages/dso-toolkit/src/components/justify-form-groups/justify-form-groups.scss
@@ -41,6 +41,8 @@
       &.dso-form-buttons {
         grid-row: 2;
         margin-block-end: 0;
+
+        align-items: flex-start;
       }
     }
 
